name:                servant-route
version:             0.1.0.0
synopsis:            Routing-based Servant APIs.
-- description:         
homepage:            https://github.com/anchor/servant-route/
license:             BSD3
license-file:        LICENSE
author:              Anchor Engineering <engineering@anchor.net.au>
maintainer:          Anchor Engineering <engineering@anchor.net.au>
copyright:           (c) 2014 Anchor Systems, Pty Ltd and Others
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:
      Servant.Route
  -- other-modules:       
  -- other-extensions:    
  build-depends:
      base >=4.7 && <4.8
    , aeson
    , bytestring
    , http-types
    , servant
    , servant-server
    , string-conversions
    , text
    , wai

-- vim: set tabstop=21 expandtab:
